[gd_scene load_steps=6 format=3 uid="uid://chkgbe07vhdxl"]

[ext_resource type="Script" uid="uid://bg6xinxyhade0" path="res://Scripts/intro_screen.gd" id="1_5xttp"]
[ext_resource type="Texture2D" uid="uid://povxtku8nxul" path="res://Assets/backgroundpotential.png" id="2_mhfmv"]
[ext_resource type="FontFile" uid="uid://datde377oev7l" path="res://Assets/Fonts/Peaberry/PeaberryBase.ttf" id="3_bsvr0"]
[ext_resource type="AudioStream" uid="uid://bqye7nkil4qjd" path="res://Assets/Music/Backstory read.mp3" id="4_5xttp"]

[sub_resource type="LabelSettings" id="LabelSettings_gdxnu"]
font = ExtResource("3_bsvr0")
font_size = 60

[node name="IntroScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5xttp")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_mhfmv")
expand_mode = 3

[node name="Label0" type="Label" parent="."]
modulate = Color(0.701961, 1, 1, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Story story story story"
label_settings = SubResource("LabelSettings_gdxnu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label1" type="Label" parent="."]
modulate = Color(0.701961, 1, 1, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 189.0
offset_right = 250.0
offset_bottom = 389.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Story story story? story!"
label_settings = SubResource("LabelSettings_gdxnu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
modulate = Color(0.701961, 1, 1, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 373.0
offset_right = 250.0
offset_bottom = 573.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Story story story..."
label_settings = SubResource("LabelSettings_gdxnu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.686275)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -616.0
offset_top = 615.0
offset_right = 277.0
offset_bottom = 815.0
grow_horizontal = 2
scale = Vector2(0.581745, 0.581745)
theme_override_font_sizes/font_size = 64
text = "Press any key to continue..."
label_settings = SubResource("LabelSettings_gdxnu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5xttp")
autoplay = true
bus = &"Music"
parameters/looping = false
